--- a/client/src/components/raitingCard/style.scss
+++ b/client/src/components/raitingCard/style.scss
@@ -60,11 +60,14 @@
       font-size: 17px;
       font-weight: 500;
       text-decoration-line: strikethrough;
-      span {
+      span#currentPrice {
         margin-right: 8px;
         color: #3bb77e;
         font-size: 21px;
         font-weight: 600;
+      }
+      span#discountLine{
+        text-decoration-line: line-through;
       }
     }
     button {
