--- a/client/src/pages/HomePage/style.scss
+++ b/client/src/pages/HomePage/style.scss
@@ -9,15 +9,58 @@
       }
     }
   }
-  .featured{
-    .featured-products{
-      .container{
+  .featured {
+    .featured-products {
+      .container {
         display: flex;
-        padding: 20px 0; 
+        padding: 20px 0;
         flex-wrap: wrap;
         gap: 26px;
         align-items: start;
         justify-content: center;
+      }
+    }
+  }
+  .table-products {
+    .container {
+      display: flex;
+      justify-content: center;
+      gap: 80px;
+      padding: 80px 0;
+      flex-wrap: wrap;
+      .column {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        width: 100%;
+        max-width: 200px;
+        h1 {
+          color: #253d4e;
+          font-size: 24px;
+          font-weight: 600;
+        }
+        .line {
+          margin-bottom: 8px;
+          width: 100%;
+          height: 1px;
+          background: rgba(0, 0, 0, 0.05);
+          position: relative;
+          span {
+            left: 0;
+            position: absolute;
+            z-index: 2;
+            width: 50%;
+            height: 2px;
+            border-radius: 3px;
+            background: #3BB77E;
+            transform: translateY(-.5px);
+          }
+        }
+        .tableCards-wrapper{
+          display: flex;
+          flex-direction: column;
+          gap: 16px;
+        }
       }
     }
   }
